--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="video-section">
           <h2>See it in Action</h2>
           <video width="100%" controls>
-            <source src="./video.mp4" type="video/mp4" />
+            <source src="./video1.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </section>
